Fix broken scrollbars on Safari

--- a/website/source/assets/stylesheets/_home.scss
+++ b/website/source/assets/stylesheets/_home.scss
@@ -227,7 +227,7 @@
 
   .terminal {
     border: 1px solid $white;
-    background-color: $black;
+    background: $black;
     box-sizing: border-box;
     color: $white;
     font-family: $font-family-monospace;
@@ -237,8 +237,9 @@
     padding: 10px 20px 20px 20px;
 
     .terminal-content {
+      background: $black;
       margin-top: 5px;
-      overflow-x: scroll;
+      overflow-x: auto;
       width: 100%;
       white-space: nowrap;
 
